--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,24 @@ body {
 h2 {
   font: 43px/53px "Playfair Display", serif;
   color: #d22f25;
+  margin-bottom: 40px;
+  margin-top: 0;
+}
+h2:after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 50px;
+  background: #e2e2e2;
+  margin: 0 auto;
+  margin-top: 20px;
 }
 
 h4 {
   font: 22px/27px "Open Sans", sans-serif;
   color: #151515;
+  margin-bottom: 20px;
+  margin-top: 0;
 }
 
 p {
@@ -21,4 +34,40 @@ p {
 
 .section-space {
   padding: 80px 0;
+}
+
+.img-responsive {
+  display: initial;
+}
+
+.section-title {
+  text-align: center;
+}
+
+/*====================== Header Section =========================*/
+.main-header {
+  border-top: 10px solid #f6f6f6;
+}
+.main-header .eye {
+  margin: 0 0 30px 0;
+}
+.main-header .secton-title h4 {
+  padding-bottom: 24px;
+}
+
+.logo {
+  margin: 30px 0;
+}
+.logo h1 {
+  color: #777777;
+  font: 14px/16px "Open Sans", sans-serif;
+  letter-spacing: 2px;
+  margin-top: 10px;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+
+/*====================== Service Section =========================*/
+.service {
+  background: #f6f6f6;
 }
