--- a/css/style.scss
+++ b/css/style.scss
@@ -1,23 +1,79 @@
 /*====================== universal code =========================*/
-$f: 'Open Sans', sans-serif;
-$p: 'Playfair Display', serif;
-body{
+
+$f: 'Open Sans',
+sans-serif;
+$p: 'Playfair Display',
+serif;
+body {
     font-family: $f;
     font-size: 16px;
 }
 
-h2{
+h2 {
     font: 43px/53px $p;
     color: rgb(210, 47, 37);
+    margin-bottom: 40px;
+    margin-top: 0;
+    &:after{
+        content: "";
+        display: block;
+        height: 2px;
+        width: 50px;
+        background: rgb(226, 226, 226);
+        margin: 0 auto;
+        margin-top: 20px;
+    }
 }
-h4{
+
+h4 {
     font: 22px/27px $f;
     color: rgb(21, 21, 21);
+    margin-bottom: 20px;
+    margin-top: 0;
 }
-p{
+
+p {
     font: 16px/24px $f;
     color: rgb(87, 87, 87);
 }
-.section-space{
+
+.section-space {
     padding: 80px 0;
+}
+
+.img-responsive {
+    display: initial;
+}
+
+.section-title{
+    text-align: center;
+}
+/*====================== Header Section =========================*/
+
+.main-header {
+    border-top: 10px solid rgb(246, 246, 246);
+    .eye{
+        margin: 0 0 30px 0;
+    }
+    .secton-title{
+        h4{
+            padding-bottom: 24px;
+        }
+    }
+}
+
+.logo {
+    margin: 30px 0;
+    h1 {
+        color: rgb(119, 119, 119);
+        font: 14px/16px $f;
+        letter-spacing: 2px;
+        margin-top: 10px;
+        text-transform: uppercase;
+        margin-bottom: 0;
+    }
+}
+/*====================== Service Section =========================*/
+.service{
+    background: rgb(246, 246, 246);
 }
