--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,10 @@ body {
 }
 
 h2 {
-  font: 43px/53px "Playfair Display", serif;
+  font: 43px "Playfair Display", serif;
   color: #d22f25;
   margin: 0 0 40px 0;
+  line-height: 1.25;
 }
 h2:after {
   content: "";
@@ -19,14 +20,16 @@ h2:after {
 }
 
 h4 {
-  font: 22px/27px "Open Sans", sans-serif;
+  font: 22px "Open Sans", sans-serif;
   color: #151515;
   margin: 0 0 20px 0;
+  line-height: 1.25;
 }
 
 p {
-  font: 16px/24px "Open Sans", sans-serif;
+  font: 16px "Open Sans", sans-serif;
   color: #575757;
+  line-height: 1.5;
 }
 
 .section-space {
@@ -57,8 +60,9 @@ p {
 }
 .logo h1 {
   color: #777777;
-  font: 14px/16px "Open Sans", sans-serif;
+  font: 14px "Open Sans", sans-serif;
   letter-spacing: 2px;
+  line-height: 1.2;
   margin: 10px 0 0 0;
   text-transform: uppercase;
 }
@@ -87,13 +91,15 @@ p {
   max-width: 733px;
   margin-left: auto;
   margin-right: auto;
+  word-wrap: break-word;
 }
 
 .contct-form {
   max-width: 733px;
   margin: 0 auto;
 }
-.contct-form input, .contct-form textarea {
+.contct-form input,
+.contct-form textarea {
   width: 100%;
   color: #474747;
   border: 1px solid #e2e2e2;
@@ -127,4 +133,45 @@ p {
 }
 .main-footer .copy-right {
   color: #f1f1f1;
+}
+
+/*====================== Media Query =========================*/
+/*====================== Tab/Notebook =========================*/
+@media (max-width: 991px) {
+  .logo img {
+    max-height: 45px;
+  }
+  .logo h1 {
+    font-size: 12px;
+  }
+
+  h2 {
+    font-size: 31px;
+  }
+
+  h4 {
+    font-size: 20px;
+  }
+
+  .service .content p {
+    max-width: 688px;
+  }
+
+  .contact .section-title h4, .contct-form {
+    max-width: 445px;
+  }
+}
+/*====================== Phone =========================*/
+@media (max-width: 767px) {
+  .contact .section-title h4, .contct-form {
+    max-width: 100%;
+  }
+
+  .contct-form .submit {
+    width: 100%;
+  }
+
+  .logo {
+    margin: 20px 0;
+  }
 }
