--- a/css/style.scss
+++ b/css/style.scss
@@ -74,6 +74,12 @@ p {
         margin: 10px 0 0 0;
         text-transform: uppercase;
     }
+    a {
+        &:hover,
+        &:focus {
+            text-decoration: none !important;
+        }
+    }
 }
 
 
@@ -176,22 +182,27 @@ p {
     h4 {
         font-size: 20px;
     }
-    .service .content p{
+    .service .content p {
         max-width: 688px;
     }
-    .contact .section-title h4,.contct-form{
+    .contact .section-title h4,
+    .contct-form {
         max-width: 445px;
     }
 }
+
+
 /*====================== Phone =========================*/
-@media (max-width:767px){
-    .contact .section-title h4, .contct-form{
+
+@media (max-width:767px) {
+    .contact .section-title h4,
+    .contct-form {
         max-width: 100%;
     }
-    .contct-form .submit{
+    .contct-form .submit {
         width: 100%;
     }
-    .logo{
+    .logo {
         margin: 20px 0;
     }
 }
