--- a/css/style.scss
+++ b/css/style.scss
@@ -10,10 +10,9 @@ body {
 }
 
 h2 {
-    font: 43px $p;
+    font: 43px/1.25 $p;
     color: rgb(210, 47, 37);
     margin: 0 0 40px 0;
-    line-height: 1.25;
     &:after {
         content: "";
         display: block;
@@ -25,16 +24,14 @@ h2 {
 }
 
 h4 {
-    font: 22px $f;
+    font: 22px/1.25 $f;
     color: rgb(21, 21, 21);
     margin: 0 0 20px 0;
-    line-height: 1.25;
 }
 
 p {
-    font: 16px $f;
+    font: 16px/1.5 $f;
     color: rgb(87, 87, 87);
-    line-height: 1.5;
 }
 
 .section-space {
@@ -68,9 +65,8 @@ p {
     margin: 30px 0;
     h1 {
         color: rgb(119, 119, 119);
-        font: 14px $f;
-        letter-spacing: 2px;
-        line-height: 1.2;
+        font: 14px/1.2 $f;
+        letter-spacing: 0.14em;
         margin: 10px 0 0 0;
         text-transform: uppercase;
     }
